Fix overflow issue on the filter menu dropdown component
ready #626

--- a/source/frontend/src/block/FilterContent/FilterContentMenu/FilterContentMenuDropdown/FilterContentMenuDropdown.scss
+++ b/source/frontend/src/block/FilterContent/FilterContentMenu/FilterContentMenuDropdown/FilterContentMenuDropdown.scss
@@ -11,6 +11,7 @@
 		white-space: nowrap;
 		overflow-y: auto;
 		padding: 20px $sizeGrid;
+	  	width: calc(100% - 50px);
 	}
 
 	.filters {
